Dates are being submitted via modal form in Processes/Index with new partial view _DateSubmitMessageBox

--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -105,3 +105,7 @@ div.accordion .accordion-group .accordion-heading .accordion-toggle {
 .ui-autocomplete {
     position: relative;
 }
+
+.clsDatePicker{
+    z-index:10000 !important;
+}
