--- a/Source/CriticalPath.Web/Views/Account/Login.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/Login.cshtml
@@ -15,10 +15,10 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-sm-4 control-label" })
+                    @Html.LabelFor(m => m.UserName, new { @class = "col-sm-4 control-label" })
                     <div class="col-sm-8">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @autofocus = "autofocus" })
+                        @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
