--- a/Source/CriticalPath.Web/Views/Account/Register.cshtml
+++ b/Source/CriticalPath.Web/Views/Account/Register.cshtml
@@ -14,6 +14,13 @@
             @Html.ValidationSummary("", new { @class = "text-danger" })
 
             <div class="form-group">
+                @Html.LabelFor(m => m.UserName, new { @class = "col-sm-4 control-label" })
+                <div class="col-sm-8">
+                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 @Html.LabelFor(m => m.FirstName, new { @class = "col-sm-4 control-label" })
                 <div class="col-sm-8">
                     @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
