--- a/Source/CriticalPath.Web/libs/ag-grid/ag-grid-addt.css
+++ b/Source/CriticalPath.Web/libs/ag-grid/ag-grid-addt.css
@@ -18,11 +18,11 @@
     }
 
 .verticalQuarter {
-    height: 19px;
+    height: 18px;
 }
 
 .verticalHalf {
-    height: 38px;
+    height: 36px;
     padding-top: 4px;
 }
 
@@ -30,8 +30,33 @@
     margin: -4px -4px 5px -4px;
     padding-left: 4px;
     padding-right: 4px;
+    overflow: hidden;
 }
 
-.wrapText{
-    white-space:normal;
+    .ag-style .ag-row-even .verticalQuarter.row-odd,
+    .ag-style .ag-row-odd .verticalQuarter.row-even,
+    .verticalHalf.row-odd {
+        background-color: rgba(221, 235, 255, 0.75);
+    }
+
+    .ag-style .ag-row-odd .verticalQuarter.row-odd,
+    .ag-style .ag-row-even .verticalQuarter.row-even,
+    .verticalHalf.row-even {
+        background-color: rgba(255, 255, 255, 0.75);
+    }
+
+.ag-style .row-header {
+    line-height: 1.2;
+    padding-left: 2px;
+}
+
+.wrapText {
+    white-space: normal;
+}
+
+.btn-xxs, .btn-group-xxs > .btn {
+    padding: 1px 2px;
+    font-size: 12px;
+    border-radius: 0;
+    line-height: 1.25;
 }
