In Delete actions returns ajax status code results for 400 and 404

--- a/Source/CriticalPath.Web/Views/ProductCategories/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/ProductCategories/Index.cshtml
@@ -63,7 +63,7 @@
                             @if (canUserDelete)
                             {
                                 <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.CategoryName)</b>', @item.Id);">
+                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.CategoryName.Replace("'", "\\'"))</b>', @item.Id);">
                                         @ActionStrings.Delete
                                     </a>
                                 </li>
