--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,11 +28,11 @@
                             @EntityStrings.Countries<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(@EntityStrings.Countries, "Index", "Countries")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateCountry, "Create", "Countries")</li>
+                            <li>@Html.ActionLink(EntityStrings.Countries, "Index", "Countries")</li>
+                            <li>@Html.ActionLink(EntityStrings.CreateCountry, "Create", "Countries")</li>
                             <li class="divider"></li>
-                            <li>@Html.ActionLink(@EntityStrings.Currencies, "Index", "Currencies")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateCurrency, "Create", "Currencies")</li>
+                            <li>@Html.ActionLink(EntityStrings.Currencies, "Index", "Currencies")</li>
+                            <li>@Html.ActionLink(EntityStrings.CreateCurrency, "Create", "Currencies")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -40,21 +40,31 @@
                             @CommonStrings.Settings<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(@EntityStrings.SizingStandards, "Index", "SizingStandards")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateSizingStandard, "Create", "SizingStandards")</li>
+                            <li>@Html.ActionLink(EntityStrings.SizingStandards, "Index", "SizingStandards")</li>
+                            <li>@Html.ActionLink(EntityStrings.CreateSizingStandard, "Create", "SizingStandards")</li>
                             <li class="divider"></li>
-                            <li>@Html.ActionLink(@EntityStrings.ProcessTemplates, "Index", "ProcessTemplates")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateProcessTemplate, "Create", "ProcessTemplates")</li>
+                            <li>@Html.ActionLink(EntityStrings.ProcessTemplates, "Index", "ProcessTemplates")</li>
+                            <li>@Html.ActionLink(EntityStrings.CreateProcessTemplate, "Create", "ProcessTemplates")</li>
                             <li class="divider"></li>
-                            <li>@Html.ActionLink(@EntityStrings.FreightTerms, "Index", "FreightTerms")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateFreightTerm, "Create", "FreightTerms")</li>
+                            <li>@Html.ActionLink(EntityStrings.FreightTerms, "Index", "FreightTerms")</li>
+                            <li>@Html.ActionLink(EntityStrings.CreateFreightTerm, "Create", "FreightTerms")</li>
                             <li class="divider"></li>
                             <li><a href="#">@CommonStrings.ApplicationSettings</a></li>
                             <li>@Html.ActionLink(CommonStrings.Setup, "Index", "Setup")</li>
                             <li>@Html.ActionLink("Application Theme", "SelectTheme", "AppSettings")</li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink(CommonStrings.Users, "Index", "Users")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            @EntityStrings.Employees / @CommonStrings.Users<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink(CommonStrings.Users, "Index", "Users")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink(EntityStrings.Employees, "Index", "Employees")</li>
+                            <li>@Html.ActionLink(EntityStrings.CreateEmployee, "Create", "Employees")</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
