small bug fixes

--- a/Source/CriticalPath.Web/Areas/Admin/Views/Employees/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Employees/Index.cshtml
@@ -51,6 +51,7 @@
                      { headerName: '@Html.DisplayNameFor(m => m.IsActive)', field: "IsActive", width: 180, cellRenderer: activeCellRenderer },
                      { headerName: '@Html.DisplayNameFor(m => m.UserName)', field: "UserName", width: 180 },
                      { headerName: '@Html.DisplayNameFor(m => m.FullName)', field: "FullName", width: 180 },
+                     { headerName: '@Html.DisplayNameFor(m => m.Email)', field: "Email", width: 180 },
                 ];
             }
 
