--- a/Source/CriticalPath.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
                     <span class="visible-lg-inline visible-md-inline">@userName</span><b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li>@Html.ActionLink(ActionStrings.ChangePassword, "ChangePassword")</li>
+                    <li>@Html.ActionLink(ActionStrings.ChangePassword, "ChangePassword", "Manage")</li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">@ActionStrings.LogOff</a></li>
                 </ul>
             </li>
