--- a/Source/CriticalPath.Web/libs/ag-grid/ag-light-blue.css
+++ b/Source/CriticalPath.Web/libs/ag-grid/ag-light-blue.css
@@ -9,7 +9,7 @@
 
 .ag-style .ag-root {
     /*border: 1px solid #9bc2e6;*/
-    font: 10pt Calibri, "Segoe UI", Thonburi, Arial, Verdana, sans-serif;
+    font: 9pt "Segoe UI", Thonburi, Arial, Verdana, sans-serif;
 }
 
 .ag-style .ag-cell {
