--- a/Source/CriticalPath.Web/Views/Products/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Index.cshtml
@@ -17,7 +17,7 @@
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
 
-	var title = EntityStrings.Products;
+    var title = EntityStrings.Products;
 }
 <div class="row well">
     <div class="col-md-8 col-sm-7">
@@ -34,54 +34,78 @@
 </div>
 @if (totalCount > 0)
 {
-	<div id="productGridParent" class="table-responsive">
-		<table id="productGrid" class="table table-striped table-bordered table-hover">
-			<tr>
-				<th>@Html.DisplayNameFor(model => model.ProductCode)</th>
-				<th>@Html.DisplayNameFor(model => model.Description)</th>
-				<th>@Html.DisplayNameFor(model => model.Category)</th>
-				<th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
-				<th>@Html.DisplayNameFor(model => model.SellingCurrency)</th>
-				<th>@Html.DisplayNameFor(model => model.RoyaltyFee)</th>
-				<th>@Html.DisplayNameFor(model => model.Discontinued)</th>
-				<th>@Html.DisplayNameFor(model => model.DiscontinueDate)</th>
-				<th>@ActionStrings.Actions</th>
-			</tr>
-    @foreach (var item in Model)
-    {
+    <div id="productGridParent" class="table-responsive">
+        <table id="productGrid" class="table table-striped table-bordered table-hover">
+            <tr>
+                <th>@ActionStrings.Action</th>
+                <th>@Html.DisplayNameFor(model => model.ProductCode)</th>
+                <th>@Html.DisplayNameFor(model => model.Description)</th>
+                <th>@Html.DisplayNameFor(model => model.Category)</th>
+                <th>@Html.DisplayNameFor(model => model.Licensed)</th>
+                <th>@Html.DisplayNameFor(model => model.DiscontinueDate)</th>
+            </tr>
+            @foreach (var item in Model)
+            {
                 <tr>
-                <td>@Html.DisplayFor(modelItem => item.ProductCode)</td>
-                <td>@Html.DisplayFor(modelItem => item.Description)</td>
-                <td>@Html.DisplayFor(modelItem => item.Category)</td>
-                <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
-                <td>@Html.DisplayFor(modelItem => item.SellingCurrency)</td>
-                <td>@Html.DisplayFor(modelItem => item.RoyaltyFee)</td>
-                <td>@Html.DisplayFor(modelItem => item.Discontinued)</td>
-                <td>@Html.DisplayFor(modelItem => item.DiscontinueDate)</td>
                     <td>
-                        <a href='@Url.Action("Details", new { id = item.Id })' title="@ActionStrings.Details"><span class="glyphicon glyphicon-new-window ml5"></span></a>
-                        @if (canUserEdit)
+                        <div class="btn-group">
+                            <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" onclick='onActionMenuClick(this)'>
+                                <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink(ActionStrings.Details, "Details", new { id = item.Id })</li>
+                                @if (canUserEdit)
+                                {
+                                    <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
+                                }
+                                @if (canUserDelete)
+                                {
+                                    <li>
+                                        <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@Html.Encode(item.ProductCode)</b>', @item.Id);">
+                                            @ActionStrings.Delete
+                                        </a>
+                                    </li>
+                                }
+                            </ul>
+                        </div>
+                    </td>
+                    <td>@Html.DisplayFor(modelItem => item.ProductCode)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Category)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Licensed)</td>
+                    <td>
+                        @if (item.Discontinued)
                         {
-                            <a href='@Url.Action("Edit", new { id = item.Id })' title="@ActionStrings.Edit"><span class="glyphicon glyphicon-edit ml5"></span></a>
-                        }
-                        @if (canUserDelete)
-                        {
-                            <a href="#deleteConfirm" data-toggle="modal" title="@ActionStrings.Delete" onclick="setDelete('<b>@(item.ProductCode)</b>', @item.Id);" >
-                                <span class="glyphicon glyphicon-trash ml5"></span>
-                                </a>
+                            @Html.DisplayFor(modelItem => item.Discontinued)
+                            @Html.DisplayFor(modelItem => item.DiscontinueDate)
                         }
                     </td>
-            </tr>
-	}
-		</table>
+                </tr>}
+        </table>
     </div>
-	@Html.Partial("_PagerPartial")
-	@Html.Partial("_MessageBoxPartial")
-	@section scripts{
-		@Html.Partial("_IndexScriptsPartial", "Products") @* Controller's name *@
-	}
+    @Html.Partial("_MessageBoxPartial")
 }
 else
 {
     <h4>@MessageStrings.NoResults!</h4>
+}
+@Html.Partial("_PagerPartial")
+@section scripts{
+    @Html.Partial("_IndexScriptsPartial", "Products") @* Controller's name *@
+    <script type="text/javascript">
+        function onActionMenuClick(menuBtn) {
+            setTimeout(function () {
+                var menuHeight = 160;
+                var rectMenu = menuBtn.getBoundingClientRect();
+                var rectGrid = document.getElementById("productGrid").getBoundingClientRect();
+                var diffY = rectGrid.bottom - rectMenu.bottom - menuHeight;
+
+                if (diffY < 0) {
+                    var viewport = $('#productGridParent');
+                    var viewportScroll = viewport.scrollTop();
+                    viewport.scrollTop((diffY * -1) + viewportScroll);
+                }
+            }, 250);
+        }
+    </script>
 }
