--- a/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_AllPriceEdit.cshtml
@@ -16,6 +16,20 @@
 </div>
 
 <div class="form-group">
+    @Html.Label(EntityStrings.LicensorPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
+    <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
+        @{ Html.EnableClientValidation(false); }
+        @Html.EditorFor(m => m.LicensorPrice, new { htmlAttributes = new { @class = "form-control text-right", autocomplete = "off" } })
+        @{ Html.EnableClientValidation(true); }
+        @Html.ValidationMessageFor(m => m.LicensorPrice, "", new { @class = "text-danger" })
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-5">
+        @Html.DropDownListFor(m => m.LicensorCurrencyId, null, ActionStrings.SelectCurrency, htmlAttributes: new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.LicensorCurrencyId, "", new { @class = "text-danger" })
+    </div>
+</div>
+
+<div class="form-group">
     @Html.Label(EntityStrings.BuyingPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3 col-xs-12" })
     <div class="col-lg-2 col-md-3 col-sm-3 col-xs-7">
         @{ Html.EnableClientValidation(false); }
